--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "email": "s.h.stefanov@mail.bg"
   },
   "dependencies": {
-    "i18next-client": "latest"
+    "i18next-client": "latest",
+    "source-map-loader": "^0.1.5",
+    "transform-loader": "^0.2.3"
   }
 }
